fix: layout problems profile

--- a/frontend/src/components/ImageTextSection/ImageTextSection.module.scss
+++ b/frontend/src/components/ImageTextSection/ImageTextSection.module.scss
@@ -7,6 +7,7 @@
     display: block;
   }
   .image {
+    min-width: 384px;
     img {
       width: 384px;
       height: 480px;
